# AgendaBlocoCarnaval

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  docker-compose.yml
apps/api/: README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20240921_0001_create_core_tables.py  20240921_0002_add_parade_foundation_year.py
apps/api/app/: main.py
apps/api/src/: main.py
apps/api/src/db/: models.py  session.py
apps/api/src/settings/: __init__.py  env.py
apps/api/tests/: test_health.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/desfile/[id]/: page.tsx
apps/web/app/mapa/: page.tsx
apps/web/app/minha-agenda/: page.tsx
apps/web/app/programacao/: page.tsx
apps/web/app/store/: agenda-store.ts
apps/web/styles/: globals.css
docs/: api-contract.md  backlog.md
