[project]
name = "agenda-bloco-api"
version = "0.1.0"
description = "API do Agenda de Blocos"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.111.0",
  "httpx==0.27.2",
  "uvicorn[standard]==0.30.1",
  "pydantic-settings==2.2.1",
  "SQLAlchemy==2.0.31",
  "alembic==1.13.2",
  "psycopg2-binary==2.9.9"
]

[tool.uvicorn]
app = "src.main:app"
